# big-number

./: .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  main.cpp
archived/: big_number_integer.hpp  big_number_math.cpp  big_number_math.hpp  big_number_utils.cpp  big_number_utils.hpp
include/: big_number.h  big_number.hpp  big_number.inl  big_number_integer.hpp  big_number_operator.h  big_number_type.h  big_number_utils.h  big_number_utils.hpp  math.hpp  number.hpp  number.inl  number_type.hpp  number_type.inl
large/: math.cpp  math.hpp  number.cpp  number.hpp  number.inl  number_type.cpp  number_type.hpp  number_type.inl
src/: CMakeLists.txt  big_number.c  big_number.cpp  big_number.hpp  big_number_integer.cpp  big_number_math.cpp  big_number_operator.c  big_number_type.c  big_number_utils.cpp  bigint.cpp  bigint.h  computing_handler.cpp  computing_handler.hpp  large_number.cpp  large_number.hpp  large_number_type.cpp  large_number_type.hpp  large_number_type.inl  main.cpp  math.cpp  number.cpp  number_type.cpp
test/: CMakeLists.txt  test.c
tests/: CMakeLists.txt  test_big_number.cpp  test_bigint.cpp
